[gd_scene load_steps=7 format=3 uid="uid://5ne7n6i1g4vt"]

[ext_resource type="PackedScene" path="res://actors/environments/RotoPowerline.tscn" id="1"]
[ext_resource type="Script" uid="uid://b41hbvdx86mxb" path="res://actors/environments/PowerBattery.gd" id="2"]
[ext_resource type="FontFile" uid="uid://cr1ufi8wpbpqp" path="res://assets/fonts/04b_19.ttf" id="3"]
[ext_resource type="PackedScene" path="res://combat/traits/Owned.tscn" id="4"]

[sub_resource type="GDScript" id="2"]
script/source = "extends Node2D

func _process(delta):
	global_rotation = 0
	
"

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="PowerBattery" instance=ExtResource("1")]
script = ExtResource("2")
interactable = false
type = "X"
charge = 0.0
charging_speed = 0.02
score_multiplier = 100.0
goal_owner = NodePath("")

[node name="Owned" parent="." index="0" instance=ExtResource("4")]

[node name="Sprite2D" parent="." index="3"]
visible = false

[node name="Line2D" parent="." index="5"]
points = PackedVector2Array(-300, 0, 300, 0, 0, 0, 0, 300, 0, -300)

[node name="NoRotate" type="Node2D" parent="." index="7"]
script = SubResource("2")

[node name="Polygon2D" type="Polygon2D" parent="NoRotate" index="0"]
color = Color(0, 0, 0, 0.85098)
polygon = PackedVector2Array(-150, 225, -150, -225, -35, -225, -35, -260, 35, -260, 35, -225, 150, -225, 150, 225)

[node name="ChargePolygon" type="Polygon2D" parent="NoRotate" index="1"]
unique_name_in_owner = true
polygon = PackedVector2Array(-125, 190, 125, 190, 125, 200, -125, 200)

[node name="BatteryOutline" type="Line2D" parent="NoRotate" index="2"]
unique_name_in_owner = true
points = PackedVector2Array(0, 225, -150, 225, -150, -225, -35, -225, -35, -260, 35, -260, 35, -225, 150, -225, 150, 225, 0, 225)
default_color = Color(1, 1, 1, 1)

[node name="PlayerLabel" type="Label" parent="NoRotate" index="3"]
unique_name_in_owner = true
offset_left = -396.0
offset_top = -400.0
offset_right = 404.0
offset_bottom = 400.0
theme_override_fonts/font = SubResource("1")
text = "PPP"
align = 1
valign = 1
